--- a/applications/hello-kenzan/index.html
+++ b/applications/hello-kenzan/index.html
@@ -1,3 +1,3 @@
-<p><h2 style="font-family:sans-serif">Thursday Gomsss></h2> </p>
+<p><h2 style="font-family:sans-serif"><marquee>Hi today is Thursday Gomsss></marquee></h2> </p>
 
 
